<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    tools:context="com.it342.sugarsafe.Sign_Up_Page">


    <TextView
        android:id="@+id/back"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_gravity="left"
        android:layout_marginLeft="10px"
        android:layout_marginTop="20px"
        android:drawableLeft="@drawable/arrow_back"
        android:foregroundGravity="left"
        android:gravity="left"
        android:text="@string/back"
        android:textColor="@color/TextColor"
        android:textStyle="bold" />


    <ImageView
        android:layout_marginTop="50px"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        app:srcCompat="@drawable/logo" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="900px"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:hint="@string/UserName"
        android:layout_marginTop="40px">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userName"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="900px"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:hint="@string/Email"
        android:layout_marginTop="20px">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="900px"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:hint="@string/age"
        android:layout_marginTop="20px">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/age"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />


    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="900px"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="20px">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="900px"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:hint="@string/ConfirmPassword"
        android:layout_marginTop="20px">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmPassword"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />


    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/signUp"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/shap_buttens"
        android:fontFamily="sans-serif"
        android:textAllCaps="false"
        android:text="@string/SignUp"
        android:textSize="18dp" />


</LinearLayout>